// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExceptionItemCardComments should not render comments when the length is falsy 1`] = `<div />`;

exports[`ExceptionItemCardComments should render comments panel closed 1`] = `
<div>
  <div
    class="euiFlexItem emotion-euiFlexItem-grow-1"
    data-test-subj="ExceptionItemCardCommentsContainer"
  >
    <div
      class="euiAccordion emotion-euiAccordion"
      data-test-subj="exceptionItemCardComments"
    >
      <div
        class="euiAccordion__triggerWrapper emotion-EuiAccordionTrigger"
      >
        <button
          aria-controls="exceptionItemCardComments"
          aria-expanded="false"
          class="euiAccordion__button emotion-euiAccordion__button"
          id="generated-id"
          type="button"
        >
          <span
            class="euiAccordion__buttonContent"
          >
            <div
              class="euiText emotion-EuiText"
              data-test-subj="ExceptionItemCardCommentsContainerTextButton"
            >
              Show comments (2)
            </div>
          </span>
        </button>
      </div>
      <div
        aria-labelledby="generated-id"
        class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper-isClosed"
        id="exceptionItemCardComments"
        inert=""
        role="group"
        style="block-size: 0;"
      >
        <div
          class="euiAccordion__children emotion-euiAccordion__children"
        >
          <div
            class="euiPanel euiPanel--plain euiPanel--paddingMedium emotion-euiPanel-grow-m-m-plain-hasBorder"
            data-test-subj="accordionContentPanel"
          >
            <ol
              class="euiTimeline euiCommentList emotion-euiTimeline-l"
              data-test-subj="accordionCommentList"
              role="list"
            >
              <li
                class="euiComment emotion-euiTimelineItem-top"
              >
                <div
                  class="emotion-euiTimelineItemIcon-top"
                >
                  <div
                    class="emotion-euiTimelineItemIcon__content"
                  >
                    <div
                      aria-label=""
                      class="euiAvatar euiAvatar--m euiAvatar--user euiCommentAvatar emotion-euiAvatar-user-m-uppercase-subdued"
                      role="img"
                      title=""
                    >
                      <span
                        class="euiAvatar__icon"
                        data-euiicon-type="userAvatar"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="emotion-euiTimelineItemEvent-top"
                >
                  <div
                    class="euiCommentEvent emotion-euiCommentEvent"
                    data-type="custom"
                  >
                    <div
                      class="euiCommentEvent__body emotion-euiCommentEvent__body-custom"
                    >
                      <p>
                        some old comment
                      </p>
                    </div>
                  </div>
                </div>
              </li>
              <li
                class="euiComment emotion-euiTimelineItem-top"
              >
                <div
                  class="emotion-euiTimelineItemIcon-top"
                >
                  <div
                    class="emotion-euiTimelineItemIcon__content"
                  >
                    <div
                      aria-label=""
                      class="euiAvatar euiAvatar--m euiAvatar--user euiCommentAvatar emotion-euiAvatar-user-m-uppercase-subdued"
                      role="img"
                      title=""
                    >
                      <span
                        class="euiAvatar__icon"
                        data-euiicon-type="userAvatar"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="emotion-euiTimelineItemEvent-top"
                >
                  <div
                    class="euiCommentEvent emotion-euiCommentEvent"
                    data-type="custom"
                  >
                    <div
                      class="euiCommentEvent__body emotion-euiCommentEvent__body-custom"
                    >
                      <p>
                        some old comment
                      </p>
                    </div>
                  </div>
                </div>
              </li>
            </ol>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExceptionItemCardComments should render comments panel opened when accordion is clicked 1`] = `
<div>
  <div
    class="euiFlexItem emotion-euiFlexItem-grow-1"
    data-test-subj="ExceptionItemCardCommentsContainer"
  >
    <div
      class="euiAccordion euiAccordion-isOpen emotion-euiAccordion"
      data-test-subj="exceptionItemCardComments"
    >
      <div
        class="euiAccordion__triggerWrapper emotion-EuiAccordionTrigger"
      >
        <button
          aria-controls="exceptionItemCardComments"
          aria-expanded="true"
          class="euiAccordion__button emotion-euiAccordion__button"
          id="generated-id"
          type="button"
        >
          <span
            class="euiAccordion__buttonContent"
          >
            <div
              class="euiText emotion-EuiText"
              data-test-subj="ExceptionItemCardCommentsContainerTextButton"
            >
              Show comments (2)
            </div>
          </span>
        </button>
      </div>
      <div
        aria-labelledby="generated-id"
        class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper-isOpen"
        id="exceptionItemCardComments"
        role="group"
        style="block-size: 0;"
      >
        <div
          class="euiAccordion__children emotion-euiAccordion__children"
        >
          <div
            class="euiPanel euiPanel--plain euiPanel--paddingMedium emotion-euiPanel-grow-m-m-plain-hasBorder"
            data-test-subj="accordionContentPanel"
          >
            <ol
              class="euiTimeline euiCommentList emotion-euiTimeline-l"
              data-test-subj="accordionCommentList"
              role="list"
            >
              <li
                class="euiComment emotion-euiTimelineItem-top"
              >
                <div
                  class="emotion-euiTimelineItemIcon-top"
                >
                  <div
                    class="emotion-euiTimelineItemIcon__content"
                  >
                    <div
                      aria-label=""
                      class="euiAvatar euiAvatar--m euiAvatar--user euiCommentAvatar emotion-euiAvatar-user-m-uppercase-subdued"
                      role="img"
                      title=""
                    >
                      <span
                        class="euiAvatar__icon"
                        data-euiicon-type="userAvatar"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="emotion-euiTimelineItemEvent-top"
                >
                  <div
                    class="euiCommentEvent emotion-euiCommentEvent"
                    data-type="custom"
                  >
                    <div
                      class="euiCommentEvent__body emotion-euiCommentEvent__body-custom"
                    >
                      <p>
                        some old comment
                      </p>
                    </div>
                  </div>
                </div>
              </li>
              <li
                class="euiComment emotion-euiTimelineItem-top"
              >
                <div
                  class="emotion-euiTimelineItemIcon-top"
                >
                  <div
                    class="emotion-euiTimelineItemIcon__content"
                  >
                    <div
                      aria-label=""
                      class="euiAvatar euiAvatar--m euiAvatar--user euiCommentAvatar emotion-euiAvatar-user-m-uppercase-subdued"
                      role="img"
                      title=""
                    >
                      <span
                        class="euiAvatar__icon"
                        data-euiicon-type="userAvatar"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="emotion-euiTimelineItemEvent-top"
                >
                  <div
                    class="euiCommentEvent emotion-euiCommentEvent"
                    data-type="custom"
                  >
                    <div
                      class="euiCommentEvent__body emotion-euiCommentEvent__body-custom"
                    >
                      <p>
                        some old comment
                      </p>
                    </div>
                  </div>
                </div>
              </li>
            </ol>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
